objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>BookDesc__c</fullName>
        <label>BookDesc</label>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>BookDesc2__c</fullName>
        <label>BookDesc</label>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>BookDesc3__c</fullName>
        <label>BookDesc</label>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>CompletedDate__c</fullName>
        <description> Save the date when milestone  </description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>CompletedDate6__c</fullName>
        <description> Save the date when milestone  </description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <label>Book</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>